--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cuid": "latest",
     "react": "16.5.2",
     "react-dom": "16.5.2",
+    "react-router-dom": "latest",
     "react-scripts": "2.0.3",
     "semantic-ui-css": "latest",
     "semantic-ui-react": "latest"
