--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "cuid": "latest",
     "react": "16.5.2",
     "react-dom": "16.5.2",
-    "react-router-dom": "latest",
+    "react-redux": "latest",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.0.3",
+    "redux": "latest",
+    "redux-devtools-extension": "2.13.7",
+    "redux-form": "latest",
     "semantic-ui-css": "latest",
     "semantic-ui-react": "latest"
   },
