--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "main": "src/index.js",
   "dependencies": {
     "cuid": "latest",
+    "date-fns": "1.29.0",
+    "history": "latest",
+    "moment": "2.20.0",
     "react": "16.5.2",
+    "react-datepicker": "1.4.0",
     "react-dom": "16.5.2",
     "react-redux": "latest",
     "react-router-dom": "4.3.1",
@@ -14,6 +18,7 @@
     "redux": "latest",
     "redux-devtools-extension": "2.13.7",
     "redux-form": "latest",
+    "revalidate": "latest",
     "semantic-ui-css": "latest",
     "semantic-ui-react": "latest"
   },
