--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   "dependencies": {
     "cuid": "latest",
     "date-fns": "1.29.0",
+    "firebase": "latest",
     "history": "latest",
     "moment": "2.20.0",
     "react": "16.5.2",
     "react-datepicker": "1.4.0",
     "react-dom": "16.5.2",
+    "react-load-script": "latest",
+    "react-places-autocomplete": "7.0.1",
     "react-redux": "latest",
+    "react-redux-firebase": "latest",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.0.3",
     "redux": "latest",
     "redux-devtools-extension": "2.13.7",
+    "redux-firestore": "latest",
     "redux-form": "latest",
+    "redux-thunk": "latest",
     "revalidate": "latest",
     "semantic-ui-css": "latest",
     "semantic-ui-react": "latest"
